@@ -2277,18 +2277,20 @@ XS(XS__updatetaskactivity);
 XS(XS__updatetaskactivity)
 {
 	dXSARGS;
-	unsigned int task, activity;
+	unsigned int task, activity, ignore_quest_update;
 	int count = 1;
+	ignore_quest_update = 0;
 	if(items == 2) {
 		task = (int)SvIV(ST(0));
 		activity = (int)SvIV(ST(1));
-		quest_manager.updatetaskactivity(task, activity, count);
+		quest_manager.updatetaskactivity(task, activity, count, false);
 	}
 	else if(items == 3) {
 		task = (int)SvIV(ST(0));
 		activity = (int)SvIV(ST(1));
 		count = (int)SvIV(ST(2));
-		quest_manager.updatetaskactivity(task, activity, count);
+		bool	ignore_quest_update = (bool)SvTRUE(ST(3));
+		quest_manager.updatetaskactivity(task, activity, count, ignore_quest_update);
 	} else {
 		Perl_croak(aTHX_ "Usage: updatetaskactivity(task, activity [,count])");
 	}
